--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2272,6 +2272,7 @@
     <Content Include="Pages\auth\WebForm2.aspx" />
     <Content Include="Pages\admin\content-creator.aspx" />
     <Content Include="Pages\lecturer\content-creator.aspx" />
+    <Content Include="Pages\lecturer\content-view.aspx" />
     <Content Include="Pages\lecturer\courses.aspx" />
     <Content Include="Pages\lecturer\lecturer-assessment-add.aspx" />
     <Content Include="Pages\lecturer\lecturer-assessment-list.aspx" />
@@ -2498,6 +2499,13 @@
     </Compile>
     <Compile Include="Pages\lecturer\content-creator.aspx.designer.cs">
       <DependentUpon>content-creator.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\lecturer\content-view.aspx.cs">
+      <DependentUpon>content-view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\lecturer\content-view.aspx.designer.cs">
+      <DependentUpon>content-view.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\lecturer\courses.aspx.cs">
       <DependentUpon>courses.aspx</DependentUpon>
