project-comment(chat) 50% working

--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2307,13 +2307,13 @@
     <Content Include="Pages\student\student-calendar.aspx" />
     <Content Include="Pages\student\student-chat-new.aspx" />
     <Content Include="Pages\student\student-chat-view.aspx" />
-    <Content Include="Pages\student\student-comment-chat.aspx" />
     <Content Include="Pages\student\student-course-list.aspx" />
     <Content Include="Pages\student\student-dashboard.aspx" />
     <Content Include="Pages\student\student-group-view.aspx" />
     <Content Include="Pages\student\student-likes-comments.aspx" />
     <Content Include="Pages\student\student-marks-view.aspx" />
     <Content Include="Pages\student\student-profile-edit.aspx" />
+    <Content Include="Pages\student\student-project-chat.aspx" />
     <Content Include="Pages\student\student-project-list.aspx" />
     <Content Include="Pages\student\student-project-view.aspx" />
     <Content Include="Pages\student\student-task-completed.aspx" />
@@ -2696,13 +2696,6 @@
     <Compile Include="Pages\student\student-chat-view.aspx.designer.cs">
       <DependentUpon>student-chat-view.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Pages\student\student-comment-chat.aspx.cs">
-      <DependentUpon>student-comment-chat.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Pages\student\student-comment-chat.aspx.designer.cs">
-      <DependentUpon>student-comment-chat.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Pages\student\student-course-list.aspx.cs">
       <DependentUpon>student-course-list.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2744,6 +2737,13 @@
     </Compile>
     <Compile Include="Pages\student\student-profile-edit.aspx.designer.cs">
       <DependentUpon>student-profile-edit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-project-chat.aspx.cs">
+      <DependentUpon>student-project-chat.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-project-chat.aspx.designer.cs">
+      <DependentUpon>student-project-chat.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\student\student-project-list.aspx.cs">
       <DependentUpon>student-project-list.aspx</DependentUpon>
