--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2311,6 +2311,7 @@
     <Content Include="Pages\student\student-course-list.aspx" />
     <Content Include="Pages\student\student-dashboard.aspx" />
     <Content Include="Pages\student\student-group-view.aspx" />
+    <Content Include="Pages\student\student-journal-view.aspx" />
     <Content Include="Pages\student\student-likes-comments.aspx" />
     <Content Include="Pages\student\student-marks-view.aspx" />
     <Content Include="Pages\student\student-profile-edit.aspx" />
@@ -2723,6 +2724,13 @@
     </Compile>
     <Compile Include="Pages\student\student-group-view.aspx.designer.cs">
       <DependentUpon>student-group-view.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\student\student-journal-view.aspx.cs">
+      <DependentUpon>student-journal-view.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\student-journal-view.aspx.designer.cs">
+      <DependentUpon>student-journal-view.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\student\student-likes-comments.aspx.cs">
       <DependentUpon>student-likes-comments.aspx</DependentUpon>
