--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2299,6 +2299,7 @@
     <Content Include="Pages\student\class.aspx" />
     <Content Include="Pages\student\code.aspx" />
     <Content Include="Pages\student\HtmlPage1.html" />
+    <Content Include="Pages\student\Journal.aspx" />
     <Content Include="Pages\student\personal-projects.aspx" />
     <Content Include="Pages\student\rest-chat-get.aspx" />
     <Content Include="Pages\student\sampleproject.txt" />
@@ -2310,7 +2311,6 @@
     <Content Include="Pages\student\student-course-list.aspx" />
     <Content Include="Pages\student\student-dashboard.aspx" />
     <Content Include="Pages\student\student-group-view.aspx" />
-    <Content Include="Pages\student\student-journal-view.aspx" />
     <Content Include="Pages\student\student-likes-comments.aspx" />
     <Content Include="Pages\student\student-marks-view.aspx" />
     <Content Include="Pages\student\student-profile-edit.aspx" />
@@ -2655,6 +2655,13 @@
     <Compile Include="Pages\student\code.aspx.designer.cs">
       <DependentUpon>code.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Pages\student\Journal.aspx.cs">
+      <DependentUpon>Journal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\student\Journal.aspx.designer.cs">
+      <DependentUpon>Journal.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Pages\student\personal-projects.aspx.cs">
       <DependentUpon>personal-projects.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2717,13 +2724,6 @@
     </Compile>
     <Compile Include="Pages\student\student-group-view.aspx.designer.cs">
       <DependentUpon>student-group-view.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Pages\student\student-journal-view.aspx.cs">
-      <DependentUpon>student-journal-view.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Pages\student\student-journal-view.aspx.designer.cs">
-      <DependentUpon>student-journal-view.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\student\student-likes-comments.aspx.cs">
       <DependentUpon>student-likes-comments.aspx</DependentUpon>
