--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2465,6 +2465,7 @@
     </Compile>
     <Compile Include="Pages\admin\admin-student-add.aspx.cs">
       <DependentUpon>admin-student-add.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Pages\admin\admin-student-add.aspx.designer.cs">
       <DependentUpon>admin-student-add.aspx</DependentUpon>
