--- a/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
+++ b/UmdlaloVirtualGaming/UmdlaloVirtualGaming.csproj
@@ -2274,6 +2274,7 @@
     <Content Include="Pages\auth\test.html" />
     <Content Include="Pages\auth\WebForm2.aspx" />
     <Content Include="Pages\admin\content-creator.aspx" />
+    <Content Include="Pages\error.aspx" />
     <Content Include="Pages\lecturer\content-creator.aspx" />
     <Content Include="Pages\lecturer\content-view.aspx" />
     <Content Include="Pages\lecturer\courses.aspx" />
@@ -2504,6 +2505,13 @@
     </Compile>
     <Compile Include="Pages\admin\content-creator.aspx.designer.cs">
       <DependentUpon>content-creator.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\error.aspx.cs">
+      <DependentUpon>error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\error.aspx.designer.cs">
+      <DependentUpon>error.aspx</DependentUpon>
     </Compile>
     <Compile Include="Pages\lecturer\content-creator.aspx.cs">
       <DependentUpon>content-creator.aspx</DependentUpon>
