--- a/UmdlaloVirtualGaming/Web.config
+++ b/UmdlaloVirtualGaming/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   
   <system.web>
-    <customErrors mode="Off"/>
+    <customErrors mode="On" defaultRedirect="~/Pages/error.aspx"/>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
     <pages>
